[package]
name = "rawrr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = { version = "0.17", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
base64 = "0.21"
dotenv = "0.15"
sha2 = "0.10"

[[bin]]
name = "rawrr"
path = "src/main.rs"
